force-app/main/default/objects/Contact/fields/Created_At_Harvest__c.field-meta.xml
<CustomField>
    <fullName>Created_At_Harvest__c</fullName>
    <description>Date and time the client contact was created on the Harvest external system</description>
    <label>Harvest Create Date</label>
    <type>DateTime</type>
</CustomField>