force-app/main/default/objects/Contact/fields/ID_Harvest__c.field-meta.xml
<CustomField>
    <fullName>ID_Harvest__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>External ID for Harvest.

Stored as text but must be an integer value</description>
    <externalId>true</externalId>
    <label>Harvest ID</label>
    <length>12</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>