force-app/main/default/objects/Contact/fields/Updated_At_Harvest__c.field-meta.xml
<CustomField>
    <fullName>Updated_At_Harvest__c</fullName>
    <inlineHelpText>Date and time the client contact was updated on the Harvest external system</inlineHelpText>
    <label>Harvest Update Date</label>
    <type>DateTime</type>
</CustomField>